fix menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,7 @@ nav > ul{
 nav > ul > li {
     padding: 0rem 1rem 0rem 2rem;
     display: inline;
+    width: 100%;
 }
 
 nav > ul > li > a{
@@ -198,11 +199,7 @@ ul.alltags > li > a.tag-selected{
 }
 
 /* Work page*/
-/* .work-title{
-    display: block;
-    padding-bottom: 2rem;
-}
-*/
+
 div.work-title{
     font-family: var(--font-header);
     padding-bottom: 2rem;
@@ -262,7 +259,18 @@ a.prev-work{
     width: 40rem;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 1rem;
+    padding-top: 0rem;
+}
+
+/* Mobile adjsustments */
+@media (max-width: 900px) {
+    nav > ul{
+        padding:0.2rem 0rem 0.2rem 0rem;
+    }
+    nav > ul > li {
+        padding: 0rem 0.5rem 0rem 0rem;
+        font-size: 1.2rem;
+    }
 }
 
 /* Mobile adjsustments */
@@ -273,13 +281,12 @@ a.prev-work{
         margin-right: 0.5rem;
     }
     nav > ul{
-        padding:1rem 0rem 1rem 0rem;
-    }
-    nav {
-        position: relative;
+        padding:0.0rem;
     }
     nav > ul > li {
-        padding: 0rem 0.5rem 0rem 0rem;
+        padding: 0.5rem 0rem 0.5rem 0rem;
+        display: block;
+        font-size: 1.2rem;
     }
     .main {
         margin-top: 0rem;
@@ -293,7 +300,7 @@ a.prev-work{
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
     .grid {
         width: 100% !important; margin-bottom: 4%;
     }
